# hs-regex

./: COPYING  Makefile  Makefile.am  README  antigen.sh  autogen.sh  configure.ac  hsprotos.h  hsre.c  hsre.h  regc_color.c  regc_cvec.c  regcomp.c  regcustom.h  regex.h  regexec.c  regguts.h  test.c
demo/: Makefile.am  bbsdefs.h  ci_strcmp.c  ci_strcmp.h  debug.ih  ex1_regex.c  ex2-regex.c  ex_regex.c  hsrex-char.c  main.c  main.ih  parse.c  parse.h  pmatch.c  pool.c  pool.h  readme.testregex  regex_example.c  rowconv.c  rowconv.h  strexp.h  string_i.h  testregex.c
doc/:  Regular expression 與 GNU grep 的中文化  An introruction to Henry Spencer's Regular Expression library  HowTo  Makefile  Makefile.am  Makefile.in.stone  PatternRules  TimeZone-Offset  Using Regular Expressions.webarchive
include/: Makefile.am  cclass.h  cname.h  config.h.in  regcomp.ih  regex.h  regex2.h  utils.h
regex/: Makefile.Mingw32
src/: Makefile.am
